# openSUSE-leap-ai-startup-guide

./: .containerignore  .gitignore  Containerfile  LICENSE  README.md  app.py  compose.yaml  config.yaml  demo.cast  pyproject.toml  requirements-spaces.txt  requirements.txt
.github/workflows/: container.yml
deploy/: setup-leap-vm.sh  suse-assist.service
deploy/oem/: README.md  appliance.kiwi  config.sh
docs/: README.md  gsoc-form-fields.md  gsoc-proposal.md  llm-comparison.md  weekly-progress.md
docs/action-items/: mcp-application-pocs.md
docs/deployment/: container-phase1.md  obs-registry-vm-validation.md  phase1-test-log.md
docs/evaluations/: all-models-quality-eval-gemini-judge.md  all-models-quality-eval-leap16-vm.md  llm-options-2026.md  quality-eval-leap16-vm.md  tier-benchmarks-leap16-vm.md  (+1 more)
opensuse_ai/: __init__.py  assistant.py  benchmark.py  bundle.py  cli.py  config.py  doctor.py  eval_dataset.py  evaluation.py  mcp_client.py  mcp_server.py  prompt_cache.py  quality.py  rag.py  safety.py  scraper.py  service_setup.py  setup_wizard.py  system_context.py  web_ui.py
scripts/: build_obs_wheelhouse.sh  demo_smoke_test.sh  deploy_container.sh  export_container_image.sh  load_container_image.sh  local_ingest.py
tests/: test_bundle.py  test_config.py  test_doctor.py  test_eval_dataset.py  test_evaluation.py  test_mcp_client.py  test_mcp_server.py  test_prompt_cache.py  test_quality.py  test_rag.py  test_safety.py  test_scraper.py  test_service_setup.py  test_setup_wizard.py  test_system_context.py  test_vectorstore_backends.py  test_web_ui.py
(+15 files in other folders)
