[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensuse-leap-ai-guide"
version = "0.1.0"
description = "AI-powered startup guide for openSUSE Leap Linux"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Anuj Agrawal"},
]

dependencies = [
    "llama-cpp-python>=0.2.56",
    "sentence-transformers>=2.5.0",
    "chromadb>=0.4.22",
    "lancedb>=0.6.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "huggingface-hub>=0.20.0",
    "gradio>=4.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
suse-assist = "opensuse_ai.cli:main"

[tool.setuptools.packages.find]
include = ["opensuse_ai*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
